k8s/stateful-set-bg.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-bg-svc
  labels:
    app: library-bg
spec:
  type: NodePort
  ports:
    - nodePort: 31037
      port: 80
      protocol: TCP
      targetPort: 8081
      name: library-bg
  selector:
    app: library-bg
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: library-bg
spec:
  selector:
    matchLabels:
      app: library-bg
  serviceName: "library-bg"
  replicas: 1
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: library-bg
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: library-bg
          image: skabo032/library-city
          ports:
            - containerPort: 8081
              name: library-bg
        - name: mongo-bg
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo-bg
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 40M
