k8s/stateful-set-nis.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-nis-svc
  labels:
    app: library-nis
spec:
  type: NodePort
  ports:
    - nodePort: 31038
      port: 80
      protocol: TCP
      targetPort: 8081
      name: library-nis
  selector:
    app: library-nis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: library-nis
spec:
  selector:
    matchLabels:
      app: library-nis
  serviceName: "library-nis"
  replicas: 1
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: library-nis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: library-nis
          image: skabo032/library-city
          ports:
            - containerPort: 8081
              name: library-nis
        - name: mongo-nis
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo-nis
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 40M
