k8s/stateful-set-ns.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-ns-svc
  labels:
    app: library-ns
spec:
  type: NodePort
  ports:
    - nodePort: 31036
      port: 80
      protocol: TCP
      targetPort: 8081
      name: library-ns
  selector:
    app: library-ns
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: library-ns
spec:
  selector:
    matchLabels:
      app: library-ns
  serviceName: "library-ns"
  replicas: 1
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: library-ns
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: library-ns
          image: skabo032/library-city
          ports:
            - containerPort: 8081
              name: library-ns
        - name: mongo-ns
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo-ns
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 40M
